docs/api/qiskit/0.24/qiskit.visualization.plot_state_paulivec.md
---
title: plot_state_paulivec
description: API reference for qiskit.visualization.plot_state_paulivec
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.visualization.plot_state_paulivec
---

<span id="qiskit-visualization-plot-state-paulivec" />

# qiskit.visualization.plot\_state\_paulivec

<span id="qiskit.visualization.plot_state_paulivec" />

`plot_state_paulivec(state, title='', figsize=None, color=None, ax=None, *, rho=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/visualization/state_visualization.py "view source code")

Plot the paulivec representation of a quantum state.

Plot a bargraph of the mixed state rho over the pauli matrices

**Parameters**

*   **state** ([*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector")  *or*[*DensityMatrix*](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") *or ndarray*) – an N-qubit quantum state.
*   **title** (*str*) – a string that represents the plot title
*   **figsize** (*tuple*) – Figure size in inches.
*   **color** (*list or str*) – Color of the expectation value bars.
*   **ax** (*matplotlib.axes.Axes*) – An optional Axes object to be used for the visualization output. If none is specified a new matplotlib Figure will be created and used. Additionally, if specified there will be no returned Figure since it is redundant.

**Returns**

The matplotlib.Figure of the visualization if the `ax` kwarg is not set

**Return type**

matplotlib.Figure

**Raises**

*   **ImportError** – Requires matplotlib.
*   [**VisualizationError**](qiskit.visualization.VisualizationError "qiskit.visualization.VisualizationError") – if input is not a valid N-qubit state.

**Example**

```python
from qiskit import QuantumCircuit
from qiskit.quantum_info import Statevector
from qiskit.visualization import plot_state_paulivec
%matplotlib inline

qc = QuantumCircuit(2)
qc.h(0)
qc.cx(0, 1)

state = Statevector.from_instruction(qc)
plot_state_paulivec(state, color='midnightblue',
     title="New PauliVec plot")
```

![../\_images/qiskit.visualization.plot\_state\_paulivec\_0\_0.png](/images/api/qiskit/0.24/qiskit.visualization.plot_state_paulivec_0_0.png) ![../\_images/qiskit.visualization.plot\_state\_paulivec\_0\_1.png](/images/api/qiskit/0.24/qiskit.visualization.plot_state_paulivec_0_1.png)

